posts/newファイルのフォームオブジェクト編集

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
         ログアウト
       </li>
       <li class="header__bar__user_nav__btn">
-        投稿する
+        <%= link_to "投稿する", new_post_path %>
       </li>
     </ul>
     <ul class="header__bar__user_nav">
