--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="header__bar">
     <h1>
       <%# ルートパスへのリンクを設置 %>
-      <span>転クエ掲示板</span>
+      <span><%= link_to '転クエ掲示板', root_path %></span>
     </h1>
     <%# ログイン状態に応じて表記を変更すること %>
     <% if user_signed_in? %>  
