--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,5 +1,6 @@
 <% if user_signed_in? %>
   <%= form_with(model: [@post, @comment], local: true) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
     <%= f.text_area :comment, autofocus: true, placeholder: 'コメントを入力', value: @comment.comment %>
     <%= f.submit '送信' %>
   <% end %>
