コメントフォームに_comments.scssを適用

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,5 +7,6 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "posts/posts.scss";
+@import "comments/_comments.scss";
 @import "shared/header";
 @import "shared/footer";
