--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -33,8 +33,10 @@
               </li>
             </ul>
             <ul class="post__bottom_box__admin_actions">
+            <% if user_signed_in? && current_user.id == post.user_id %>
               <li>編集</li>
               <li>削除</li>
+            <% end %>
             </ul>
           </div>
         </div>
