--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,7 +31,7 @@
                   </li>
                   <li>
                     <i class="far fa-heart"></i>
-                    <span>いいね数</span>
+                    <span><%= post.likes.count %></span>
                   </li>
                 </ul>
                 <% if user_signed_in? && current_user.id == post.user_id %>
