posts.indexにlikes.createのリンクを実装（未いいね時）

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,7 +30,13 @@
                     <span>コメント数</span>
                   </li>
                   <% if user_signed_in? %>
-                  <% else %>  
+                    <li>
+                      <%= link_to post_likes_path(post), class: "post_action_btn", method: :post do %>
+                        <i class="far fa-heart"></i>
+                        <span><%= post.likes.count if post.likes.count > 0 %></span>
+                      <% end %>
+                    </li>
+                  <% else %>
                     <li>
                       <i class="far fa-heart"></i>
                       <span><%= post.likes.count if post.likes.count > 0 %></span>
