--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,9 +31,11 @@
                   </li>
                   <% if user_signed_in? %>
                     <% if post.already_liked?(current_user) %>
-                      <li class="post_liked">
-                        <i class="fas fa-heart"></i>
-                        <span><%= post.likes.count %></span>
+                      <li>
+                        <%= link_to post_like_path(post), class: "post_action_btn post_liked", method: :delete do %>
+                          <i class="fas fa-heart"></i>
+                          <span><%= post.likes.count %></span>
+                        <% end %>
                       </li>
                     <% else %>
                       <li>
