--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
       <h5>新規登録</h5>
     </div>
     <div class="account_page__inner--user_form">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f|%>
         <%= render "devise/shared/error_messages", resource: resource %>
 
         <div class="field">
