--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,10 +35,12 @@
               <span>いいね数</span>
             </li>
           </ul>
-          <div class="post_detail__bottom_box__admin_actions">
-            編集
-            削除
-          </div>
+          <% if user_signed_in? && current_user.id == @post.user_id %>
+            <div class="post_detail__bottom_box__admin_actions">
+              <%= link_to "編集", "#" %>
+              <%= link_to "削除", "#" %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
