--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,8 @@
       <h5>新規登録</h5>
     </div>
     <div class="account_page__inner--user_form">
-      <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f|%>
-        <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+        <%= render "devise/shared/error_messages", resource: @user %>
         <div class="field">
           <div class="field_input">
             <%= f.text_field :name, autofocus: true, placeholder: '名前' %>
