投稿詳細画面にコメントフォームの部分テンプレートを設置

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -65,6 +65,7 @@
       </ul>
       <div class="comment_area__form_box">
         <%# コメントのフォームを設置 %>
+        <%= render 'comments/comment_form' %>
       </div>
     </div>
   </div>
