--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -47,28 +47,25 @@
     <div class="comment_area">
       <ul class="comment_area__list">
       <%# コメントがある場合は、全てのコメントが表示されていること %>
-        <li class="comment_area__list__comment">
-          <div class="comment_area__list__comment__left_box">
-            <span>コメント投稿者</span>
-          </div>
-          <div class="comment_area__list__comment__right_box">
-            <div class="comment_area__list__comment__right_box__info">
-              <span>編集</span>
-              <span>削除</span>
-              <span>投稿日時：投稿日時</span>
+        <% @comments.each do |comment| %>
+          <li class="comment_area__list__comment">
+            <div class="comment_area__list__comment__left_box">
+              <span><%= comment.user.name %></span>
             </div>
-            <div class="comment_area__list__comment__right_box__text">
-              <span>コメント内容</span>
+            <div class="comment_area__list__comment__right_box">
+              <div class="comment_area__list__comment__right_box__info">
+                <% if current_user == comment.user %>
+                  <span><%= link_to '編集', '#' %></span>
+                  <span><%= link_to '削除', '#', method: :delete, data: { confirm: '本当に削除して良いですか?', cancel: 'やめる', commit: '削除する'}, title: '削除確認' %></span>
+                <% end %>
+                <span>投稿日時：<%= l comment.created_at %></span>
+              </div>
+              <div class="comment_area__list__comment__right_box__text">
+                <span>コメント内容</span>
+              </div>
             </div>
-            <% @comments.each do |comment| %>
-              <%= comment.user.name %>
-              <% if current_user == comment.user %>
-                <%= link_to '編集', '#' %>
-                <%= link_to '削除', '#', method: :delete, data: { confirm: '本当に削除して良いですか?', cancel: 'やめる', commit: '削除する'}, title: '削除確認' %>
-              <% end %>
-            <% end %>
-          </div>
-        </li>
+          </li>    
+        <% end %>  
       </ul>
       <%# コメントのフォームを設置 %>
       <%= render 'comments/comment_form' %>
