--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -61,7 +61,7 @@
                 <span>投稿日時：<%= l comment.created_at %></span>
               </div>
               <div class="comment_area__list__comment__right_box__text">
-                <span>コメント内容</span>
+                <span><%= comment.comment %></span>
               </div>
             </div>
           </li>    
