--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,7 +28,7 @@
                   <ul class="post__bottom_box__user_actions">
                     <li>
                       <i class="far fa-comment-alt"></i>
-                      <span><%= post.comments.count %></span>
+                      <span><%= post.comments.count if post.comments.count > 0 %></span>
                     </li>
                     <li>
                       <i class="far fa-heart"></i>
