--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,7 +28,7 @@
           <ul class="post_detail__bottom_box__user_actions">
             <li>
               <i class="far fa-comment-alt"></i>
-              <span><%= @comments.count %></span>
+              <span><%= @comments.count if @post.comments.count > 0 %></span>
             </li>
             <li>
               <i class="far fa-heart"></i>
