コメントフォームのファイル名を変更

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -68,7 +68,7 @@
         <% end %>  
       </ul>
       <%# コメントのフォームを設置 %>
-      <%= render 'comments/comment_form' %>
+      <%= render 'comments/form' %>
     </div>
   </div>
 </div>
