--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -26,10 +26,12 @@
                 </div>
                 <div class="post__bottom_box">
                   <ul class="post__bottom_box__user_actions">
-                    <li>
-                      <i class="far fa-comment-alt"></i>
-                      <span><%= post.comments.count if post.comments.count > 0 %></span>
-                    </li>
+                    <%= link_to new_post_comment_path(post.id), class: "post_action_btn comment_btn" do %>
+                      <li>
+                        <i class="far fa-comment-alt"></i>
+                        <span><%= post.comments.count if post.comments.count > 0 %></span>
+                      </li>
+                    <% end %>
                     <li>
                       <i class="far fa-heart"></i>
                       <span>いいね数</span>
