[修正]likesアクションへのルーティングをpostsにネスト

--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
   <% if post.already_liked?(current_user) %>
     <li>
-      <%= link_to post_like_path(post), class: "post_action_btn post_liked", method: :delete do %>
+      <%= link_to post_likes_path(post), class: "post_action_btn post_liked", method: :delete do %>
         <i class="fas fa-heart"></i>
         <span><%= post.likes.count %></span>
       <% end %>
