--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -37,8 +37,8 @@
                   </ul>
                   <% if user_signed_in? && current_user.id == post.user_id %>
                     <ul class="post__bottom_box__admin_actions">
-                      <li>編集</li>
-                      <li>削除</li>
+                      <li><%= link_to "編集", edit_post_path(post.id) %></li>
+                      <li><%= link_to "削除", post, method: :delete %></li>
                     </ul>
                   <% end %>
                 </div>
