掲示板編集ページにフォーム設置

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,6 +5,17 @@
         <span>投稿編集</span>
       </h3>
       <%# フォームを設置 %>
+      <%= form_with(model: @post, local: true ) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <div class="form_area">
+          <div  class="form_area__field">
+            <%= f.text_area :content, rows: '10', autofocus: true, placeholder: '投稿内容を入力' %>
+          </div>
+        </div>
+        <div class="form_area__action">
+          <%= f.submit "投稿", class: 'form_area__action__btn' %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
