[修正]編集/削除リンクを修正しました2

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -37,8 +37,8 @@
                   </ul>
                   <% if user_signed_in? && current_user.id == post.user_id %>
                     <ul class="post__bottom_box__admin_actions">
-                      <%= link_to "編集", edit_post_path(@post.id) %>
-                      <%= link_to "削除", post_path, method: :delete, data: { confirm: '本当に削除して良いですか？',  cancel: 'やめる', commit: '削除する' }, title: "削除確認" %>
+                      <%= link_to "編集", edit_post_path(post.id) %>
+                      <%= link_to "削除", post, method: :delete, data: { confirm: '本当に削除して良いですか？',  cancel: 'やめる', commit: '削除する' }, title: "削除確認" %>
                     </ul>
                   <% end %>
                 </div>
