--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -4,17 +4,7 @@
       <h3>
         <span>投稿編集</span>
       </h3>
-      <%= form_with(model: @post, local: true ) do |f| %>
-        <div class="form_area">
-          <%= render 'shared/error_messages', object: f.object %>
-          <div  class="form_area__field">
-            <%= f.text_area :content, rows: '10', autofocus: true, placeholder: '投稿内容を入力' %>
-          </div>
-        </div>
-        <div class="form_area__action">
-          <%= f.submit "投稿", class: 'form_area__action__btn' %>
-        </div>
-      <% end %>
+      <%= render 'form' %>
     </div>
   </div>
 </div>
