--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,7 +29,7 @@
                     <%= link_to new_post_comment_path(post.id), class: "post_action_btn comment_btn" do %>
                       <li>
                         <i class="far fa-comment-alt"></i>
-                        <span><%= post.comments.count if post.comments.count > 0 %></span>
+                        <span><%= display_count(post.comments) %></span>
                       </li>
                     <% end %>
                     <%= render partial: 'likes/like', locals: { post: post } %>
