いいね機能の部分テンプレートにdisplay_count(post.likes)を追加

--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -10,7 +10,7 @@
     <li>
       <%= link_to post_likes_path(post), class: "post_action_btn", method: :post do %>
         <i class="far fa-heart"></i>
-        <span><%= post.likes.count if post.likes.count > 0 %></span>
+        <span><%= display_count(post.likes) %></span>
       <% end %>
     </li>
   <% end %>
@@ -18,7 +18,7 @@
   <li>
     <%= link_to post_likes_path(post), class: "post_action_btn", method: :post do %>
       <i class="far fa-heart"></i>
-      <span><%= post.likes.count if post.likes.count > 0 %></span>
+      <span><%= display_count(post.likes) %></span>
     <% end %>
   </li>
 <% end %>
