投稿詳細画面のrender 'comments/index'にlocals: { post: @post }を追加

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="comment_area">
-      <%= render 'comments/index' %>
+      <%= render partial: 'comments/index', locals: { post: @post } %>
       <%= render 'comments/form' %>
     </div>
   </div>
