投稿詳細画面にコメント一覧表示の条件を追加

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -42,7 +42,9 @@
       </div>
     </div>
     <div class="comment_area">
-      <%= render partial: 'comments/index', locals: { post: @post } %>
+      <% if @comments %>
+        <%= render partial: 'comments/index', locals: { post: @post } %>
+      <% end %>
       <%= render 'comments/form' %>
     </div>
   </div>
